# WEB_GOIT

./: .gitignore  HW_1.py
HW_1/: HW_1.py
HW_10/hw_quotes/hw_quotes/: settings.py
HW_10/hw_quotes/quotes/: forms.py  models.py  views.py
HW_10/hw_quotes/users/: forms.py  views.py
HW_10/hw_quotes/utils/: migration.py
HW_11/: pyproject.toml
HW_11/migrations/versions/: 5533aa3ff77c_init.py
HW_11/src/conf/: config.ini
HW_12/: pyproject.toml
HW_13/part_1/: main.py  pyproject.toml
HW_13/part_2/: pyproject.toml
HW_14/: docker-compose.yml  pyproject.toml  readme.md
HW_14/docs/: conf.py  index.rst
HW_14/src/: schemas.py
HW_14/src/conf/: config.py
HW_14/src/repository/: users.py
HW_14/tests/: test_unit_repository_notes.py
HW_2/Helper/: Pipfile  requirements.txt
HW_2/Helper-dev/: pyproject.toml
HW_2/Helper2/: pyproject.toml
HW_2/Helper2/Helper/: bot.py
HW_3/factorize/: factorize.py
HW_3/sort_file/: sort.py
HW_5/: currency.py
HW_6/: Pipfile  Script-create_table.sql  Script-select-hw.sql  create_db.py  data_base.db  query_ 10.sql  query_ 2.sql  query_ 3.sql  query_ 4.sql  query_ 5.sql  query_ 6.sql  query_ 7.sql  query_ 8.sql  query_ 9.sql  query_11.sql  seeds.py
HW_7/: Pipfile  config.ini  main.py
HW_8/: Pipfile
HW_8/HW_Mongo/: find_script.py  models.py  upload_script.py
HW_8/RebbitMQ/: consumer.py  models.py  producer.py  seed.py
HW_9/: main.py  models.py
HW__2/Helper-dev/: Dockerfile
Helper_bot/: Dockerfile
Helper_bot/Helper_assistant_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+10 files in other folders)
