[tool.poetry]
name = "hw_13_1"
version = "0.1.0"
description = "Fastapi"
authors = ["Ovcharenko_Roman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
libgravatar = "^1.0.4"
jinja2 = "^3.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
fastapi-mail = "^1.2.8"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
redis = "^4.5.5"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
