[tool.poetry]
name = "helper-dev"
version = "0.1.0"
description = ""
authors = ["Chypas <r.a.ovcharenko@gmail.com>"]
readme = "README.md"
packages = [{include = "helper_dev"}]

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
